--- a/index.html
+++ b/index.html
@@ -15,24 +15,66 @@
     <h1>C:\Meu Portifólio</h1>
   </section>
   <section>
-    <nav class="container">
-      <ul>
-        <li><a href="#sobre mim"  >/Sobre_Min</a></li>
-        <li><a href="#Projetos" >/Projetos</a></li>
-        <li><a href="#Serviço" >/Serviços</a></li>
-        <li><a href="#Serviço">/Minhas_skils</a></li>
+    <nav class="container1">
+      <ul class="nav">
+        <li><a href="#sobre mim"  >Sobre Mim</a></li>
+        <li><a href="#Projetos" >Projetos</a></li>
+        <li><a href="#contato" >contato</a></li>
+        <li><a href="#minhasskils">Minhas_skils</a></li>
       </ul>
     </nav>
   </section>
-  <section id="sobre mim">
-    <h2 >/Sobre_Min</h2>
-<p>_</p>
+    <section id="sobremim">
+         <h2>$ cd Sobre Mim</h2>
+    <h3>$ ls</h3>
+    <p>Olá, meu mome é Everton, sou um programador fullstack a procura da primeira experiência de mercado. Abaixo você
+      verá meus projetos e as tecnologias que eu domino. Bem vindo(a/e)!.txt</p>
+      
+  </section>
+
+  <section id="Projetos" >
+    <h2>$ cd Projetos</h2>
+    <h3>$ ls</h3>
+    
+    <ul class="container">
+      <li>Essa é a lista de projetos.txt</li>
+      <li><a href="https://github.com/he445/blueproject1" target="_blank">node A Jornada do Herói.js</a></li>
+      <li><a href="https://github.com/he445/blueproject2" target="_blank">node Jokempô.js</a></li>
+      <li><a href="https://github.com/he445/blueproject3" target="_blank"> node Jogo da Velha.js</a></li>
+      <li><a href="https://github.com/he445/blueproject4" target="_blank">node Ficção Interativa.js</a></li>
+    </ul>
+ 
+</section>
+
+  <section id="contato">
+    <h2>$ cd Contato</h2>
+    <h3>$ ls</h3>
+    <ul class="container">
+      <li>Esses são os meus contatos.txt</li>
+      <li><a href="https://www.linkedin.com/in/everton-ferreira-da-silva-46643a215"  target="_blank">LinkedIn.html</a></li>
+      <li><a href="https://github.com/he445"  target="_blank">Github.html</a></li>
+      <li><a href="https://mail.google.com/mail"  target="_blank" >everton.f.silva0@gmail.com.mail</a></li> 
+    </ul>
+  </section>
+
+  <section id="minhasskils">
+    <h2>$ cd Misnhas Skills</h2>
+    <h3>$ ls</h3>
+    <ul class="container">
+      <li>Esses são as tecnologias que eu domino.txt</li>
+      <li><a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript"  target="_blank">javaScript.js</a></li>
+      <li><a href="https://nodejs.org/en/about/" target="_blank">node.js</a></li>
+      <li><a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">css.css</a></li>
+      <li><a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank">html.html</a></li>
+    </ul>
   </section>
 
 
-  </body>
-</main>
-<footer>
 
+    
+</body>
+</main>
+<footer class="container" >
+<p><a href="https://www.linkedin.com/in/everton-ferreira-da-silva-46643a215" target="_blank">feito por: Everton Ferreira da Silva</a></p>
 </footer>
 </html>
