--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
         <nav class="container1">
           <ul class="nav">
             <li><a href="#sobremim">Sobre Mim</a></li>
-            <li><a href="#Projetos">Projetos</a></li>
-            <li><a href="#contato">contato</a></li>
-            <li><a href="#minhasskils">Minhas_skils</a></li>
+            <li ><a id="pojetoli1" href="#Projetos">Projetos</a></li>
+            <li><a id="pojetoli2" href="#contato">contato</a></li>
+            <li><a id="pojetoli3" href="#minhasskils">Minhas_skils</a></li>
           </ul>
         </nav>
+      </section >
+      <section id="contolador" >
+        <form  >
+        <label  for="controlador">$</label>
+         
+          <input type="controlador"/>
+        </form>
       </section>
         
       <section id="sobremim">
@@ -36,7 +43,7 @@
           
       </section>
 
-      <section id="Projetos" class="showdownon">
+      <section id="Projetos" >
         <h2>$ cd Projetos</h2>
         <h3>$ ls</h3>
 
