--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="estilo.css" />
-    <script src="script.js">  
-    </script>  
+    <script src="script.js"></script>
     <title>C:\Meu Portifólio</title>
   </head>
   <main>
@@ -17,18 +16,18 @@
         <nav class="container1">
           <ul class="nav">
             <li><a href="#sobremim">Sobre Mim</a></li>
-            <li ><a id="pojetoli1" href="#Projetos">Projetos</a></li>
+            <li><a id="pojetoli1" href="#Projetos">Projetos</a></li>
             <li><a id="pojetoli2" href="#contato">contato</a></li>
             <li><a id="pojetoli3" href="#minhasskils">Minhas_skils</a></li>
           </ul>
         </nav>
-      </section >
-      <section id="contolador" >
-        <form  >
-        <label  for="controlador">$</label>
-         
-          <input type="controlador"/>
-        </form>
+        <p>Olá bem vindo(a/e), para interagir com o terminar basta digitar cd+diretório ex:cd projetos</p>
+      </section>
+      <section>
+        <label for="controlador">$</label>
+
+        <input id="controlador" type="text" />
+        <p id="erro">$</p>
       </section>
         
       <section id="sobremim">
@@ -43,7 +42,7 @@
           
       </section>
 
-      <section id="Projetos" >
+      <section id="Projetos">
         <h2>$ cd Projetos</h2>
         <h3>$ ls</h3>
 
