--- a/index.html
+++ b/index.html
@@ -3,26 +3,30 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="estilo.css" />
-    <script src="script.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+
     <title>C:\Meu Portifólio</title>
   </head>
-  <main>
-    <body>
-      <section>
-        <h1>C:\Meu Portifólio</h1>
-      </section>
-      <section>
-        <nav class="container1">
-          <ul class="nav">
-            <li><a href="#sobremim">Sobre Mim</a></li>
-            <li><a id="pojetoli1" href="#Projetos">Projetos</a></li>
-            <li><a id="pojetoli2" href="#contato">contato</a></li>
-            <li><a id="pojetoli3" href="#minhasskils">Minhas_skils</a></li>
-          </ul>
-        </nav>
-        <p>Olá bem vindo(a/e), para interagir com o terminar basta digitar cd+diretório ex:cd projetos</p>
-      </section>
+
+  <body>
+    <section>
+      <h1>C:\Meu Portifólio</h1>
+    </section>
+    <section>
+      <nav class="container1">
+        <ul class="nav">
+          <li><a href="#sobremim">Sobre Mim</a></li>
+          <li><a id="pojetoli1" href="#Projetos">Projetos</a></li>
+          <li><a id="pojetoli2" href="#contato">contato</a></li>
+          <li><a id="pojetoli3" href="#minhasskils">Minhas_skils</a></li>
+        </ul>
+      </nav>
+      <p>
+        Olá bem vindo(a/e), para interagir com o terminar basta digitar
+        cd+diretório ex:cd projetos
+      </p>
+    </section>
+    <main>
       <section>
         <label for="controlador">$</label>
 
@@ -127,8 +131,10 @@
       </section>
 
         
-    </body>
-  </main>
+    </main>
+    <script src="script.js"></script>
+  </body>
+
   <footer class="container">
     <p>
       <a
